{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 33,
  "lineage": "40c7e83c-837e-64d0-1053-8c7dc54c8c36",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/frontendIPConfigurations/AzureWebServerMG-public-ip",
                "name": "AzureWebServerMG-public-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/AzureWebServerMG-public-ip"
              }
            ],
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer",
            "location": "eastus",
            "name": "AzureWebServerMG-load-balancer",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "AzureWebServerMG"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool",
            "loadbalancer_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer",
            "name": "AzureWebServerMG-backend-address-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/probes/AzureWebServerMG-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer",
            "name": "AzureWebServerMG-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/frontendIPConfigurations/AzureWebServerMG-public-ip",
            "frontend_ip_configuration_name": "AzureWebServerMG-public-ip",
            "frontend_port": 80,
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/loadBalancingRules/AzureWebServerMG-lb-rule-http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer",
            "name": "AzureWebServerMG-lb-rule-http",
            "probe_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/probes/AzureWebServerMG-lb-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-0-nic",
            "internal_domain_name_suffix": "e3iqupvp3zte1awgwczfbl23ph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "AzureWebServerMG-0-ip-configuration",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9D-88-6E",
            "name": "AzureWebServerMG-0-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "env": "AzureWebServerMG"
            },
            "virtual_machine_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachines/AzureWebServerMG-0-vm"
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-1-nic",
            "internal_domain_name_suffix": "e3iqupvp3zte1awgwczfbl23ph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "AzureWebServerMG-1-ip-configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-98-CE-02",
            "name": "AzureWebServerMG-1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "env": "AzureWebServerMG"
            },
            "virtual_machine_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachines/AzureWebServerMG-1-vm"
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool",
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-0-nic/ipConfigurations/AzureWebServerMG-0-ip-configuration|/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool",
            "ip_configuration_name": "AzureWebServerMG-0-ip-configuration",
            "network_interface_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-0-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool",
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-1-nic/ipConfigurations/AzureWebServerMG-1-ip-configuration|/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/AzureWebServerMG-load-balancer/backendAddressPools/AzureWebServerMG-backend-address-pool",
            "ip_configuration_name": "AzureWebServerMG-1-ip-configuration",
            "network_interface_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/AzureWebServerMG-1-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/AzureWebServerMG-nsg",
            "location": "eastus",
            "name": "AzureWebServerMG-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyVNetInboundFromInternet",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "AzureWebServerMG"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mainsr100",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/AzureWebServerMG-nsg/securityRules/DenyVNetInboundFromInternet",
            "name": "DenyVNetInboundFromInternet",
            "network_security_group_name": "AzureWebServerMG-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/AzureWebServerMG-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.31.153",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "AzureWebServerMG-public-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "AzureWebServerMG"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet",
            "name": "AzureWebServerMG-subnet",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "AzureWebServerMG-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet",
            "network_security_group_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/AzureWebServerMG-nsg",
            "subnet_id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3e0a5127-eeaf-4d66-82c6-b0b250af9d7f",
            "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network",
            "location": "eastus",
            "name": "AzureWebServerMG-network",
            "resource_group_name": "Azuredevops",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/AzureWebServerMG-network/subnets/AzureWebServerMG-subnet",
                "name": "AzureWebServerMG-subnet",
                "security_group": "/subscriptions/2576e2a1-0b1e-4545-9622-12ca44208419/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/AzureWebServerMG-nsg"
              }
            ],
            "tags": {
              "env": "AzureWebServerMG"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}